--- a/index.html
+++ b/index.html
@@ -46,10 +46,20 @@
                 </div>
                 <div class="banner-carousel owl-carousel">
                   <div class="banner-single-carousel">
-                    <p>Fox News Anchor Bret Baier...</p>
+                    <p>Crafting Digital Excellence</p>
+                  </div>
+
+                  <div class="banner-single-carousel">
+                    <p>Where Ideas Meet Innovation</p>
                   </div>
                   <div class="banner-single-carousel">
-                    <p>Elementor Is Great WordPress...</p>
+                    <p>Code Artistry in Action</p>
+                  </div>
+                  <div class="banner-single-carousel">
+                    <p>Pixel Perfection and Code Brilliance</p>
+                  </div>
+                  <div class="banner-single-carousel">
+                    <p>From Concept to Code</p>
                   </div>
                 </div>
               </div>
@@ -62,7 +72,7 @@
                       <a href="#"><i class="fab fa-facebook-f"></i></a>
                     </li>
                     <li>
-                      <a href="#"><i class="fab fa-twitter"></i></a>
+                      <a href="#"><i class="fab fa-github"></i></a>
                     </li>
                     <li>
                       <a href="#"><i class="fab fa-linkedin-in"></i></a>
@@ -101,10 +111,6 @@
                   <ul class="navbarmneuclass">
                     <li class="current">
                       <a href="#">Home</a>
-                      <ul>
-                        <li><a href="index.html">Home Page 1</a></li>
-                        <li><a href="index1.html">Home Page 2</a></li>
-                      </ul>
                     </li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#service">Service</a></li>
@@ -193,11 +199,12 @@
                 <div class="col-lg-7">
                   <div class="wlc-title white">
                     <h1 class="fadeInDown animated">
-                      <span>imagination</span> is more important than knowledge
+                      Muhammad <span> Rizwan </span> <br />Varsatile Developer
                     </h1>
                     <p class="fadeInDown animated">
-                      Together we the people achieve more than any single person
-                      <br />could ever do alone.
+                      Explore the limitless possibilities of web development as
+                      we push the boundaries of what's possible in the digital
+                      realm.
                     </p>
 
                     <a href="#" class="cbtn cbnt1 fadeInDown animated"
@@ -208,8 +215,12 @@
               </div>
             </div>
             <div class="wlc-author-1">
-              <img src="assets/img/author/Author1.jpeg" alt="Author image" />
-              <h1 class="wlc-filltext">gilroy</h1>
+              <img
+                src="assets/img/author/Author2.jpeg"
+                alt="Author image"
+                class="heroImg1"
+              />
+              <h1 class="wlc-filltext">Rizwan</h1>
             </div>
           </div>
           <div class="single-welcome-area home_1">
@@ -218,11 +229,13 @@
                 <div class="col-lg-7">
                   <div class="wlc-title white">
                     <h1 class="fadeInDown animated">
-                      <span>imagination</span> is more important than knowledge
+                      Beyond <span> Boundaries </span> <br />The Art of Web
+                      Mastery
                     </h1>
                     <p class="fadeInDown animated">
-                      Together we the people achieve more than any single person
-                      <br />could ever do alone.
+                      Step into a universe where lines of code weave stories of
+                      innovation, seamlessly transforming ideas into digital
+                      realities.
                     </p>
                     <a href="#" class="cbtn cbnt1 fadeInDown animated"
                       >Getting Started <i class="fal fa-angle-right"></i
@@ -232,8 +245,12 @@
               </div>
             </div>
             <div class="wlc-author-1">
-              <img src="assets/img/author/Author2.jpeg" alt="Autor image" />
-              <h1 class="wlc-filltext">gilroy</h1>
+              <img
+                src="assets/img/author/author1.png"
+                alt="Autor image"
+                class="heroImg"
+              />
+              <h1 class="wlc-filltext">Rizwan</h1>
             </div>
           </div>
         </div>
@@ -249,7 +266,11 @@
               <div class="about-shape">
                 <div class="about-img-section about-img-section1 text-center">
                   <a id="play-video" class="video-play-button" href="#"
-                    ><span></span
+                    ><span>
+                      <img
+                        src="../assets/img/author/Author2.jpeg"
+                        alt=""
+                      /> </span
                   ></a>
                   <div id="video-overlay" class="video-overlay">
                     <a class="video-overlay-close"></a>
@@ -569,7 +590,7 @@
                   <div class="testimonial-text animated fadeInDown">
                     <img src="assets/img/icon/quote.png" alt="" />
                     <h4>
-                      Gilroy is a great and super-professional service provider,
+                      Rizwan is a great and super-professional service provider,
                       which brought new technologes, new methodology, and a
                       fresh perspective to our project
                     </h4>
@@ -583,7 +604,7 @@
                   <div class="testimonial-text">
                     <img src="assets/img/icon/quote.png" alt="" />
                     <h4>
-                      Gilroy is a great and super-professional service provider,
+                      Rizwan is a great and super-professional service provider,
                       which brought new technologes, new methodology, and a
                       fresh perspective to our project
                     </h4>
@@ -597,7 +618,7 @@
                   <div class="testimonial-text">
                     <img src="assets/img/icon/quote.png" alt="" />
                     <h4>
-                      Gilroy is a great and super-professional service provider,
+                      Rizwan is a great and super-professional service provider,
                       which brought new technologes, new methodology, and a
                       fresh perspective to our project
                     </h4>
