--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -47,10 +47,20 @@
                 </div>
                 <div class="banner-carousel owl-carousel">
                   <div class="banner-single-carousel">
-                    <p>Fox News Anchor Bret Baier...</p>
+                    <p>Crafting Digital Excellence</p>
+                  </div>
+
+                  <div class="banner-single-carousel">
+                    <p>Where Ideas Meet Innovation</p>
                   </div>
                   <div class="banner-single-carousel">
-                    <p>Elementor Is Great WordPress...</p>
+                    <p>Code Artistry in Action</p>
+                  </div>
+                  <div class="banner-single-carousel">
+                    <p>Pixel Perfection and Code Brilliance</p>
+                  </div>
+                  <div class="banner-single-carousel">
+                    <p>From Concept to Code</p>
                   </div>
                 </div>
               </div>
@@ -102,10 +112,6 @@
                   <ul class="navbarmneuclass">
                     <li class="current">
                       <a href="#home">Home</a>
-                      <ul>
-                        <li><a href="index.html">Home Page 1</a></li>
-                        <li><a href="index1.html">Home Page 2</a></li>
-                      </ul>
                     </li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#service">Service</a></li>
