--- a/portfolio.html
+++ b/portfolio.html
@@ -103,7 +103,7 @@
           <div class="row">
             <div class="col-6 col-lg-3 align-self-center">
               <a href="index.html" class="logo"
-                ><img src="assets/img/logo/logo.svg" alt=""
+                ><img src="assets/img/logo/logo.png" alt=""
               /></a>
             </div>
             <div class="col-6 text-center align-self-center">
@@ -158,7 +158,7 @@
               <i class="fal fa-times"></i>
             </div>
             <div class="logo">
-              <a href="#"><img src="assets/img/logo/logo.svg" alt="" /></a>
+              <a href="#"><img src="assets/img/logo/logo.png" alt="" /></a>
             </div>
             <div class="side-content">
               <p>
@@ -407,7 +407,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social4.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -418,7 +418,7 @@
                         <i class="fab fa-linkedin-in"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Linkedin community!
                       </p>
                     </a>
                   </div>
@@ -429,7 +429,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social1.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -440,7 +440,7 @@
                         <i class="fab fa-facebook-f"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Facebook community!
                       </p>
                     </a>
                   </div>
@@ -451,7 +451,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social2.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -459,10 +459,10 @@
                   >
                     <a href="">
                       <span class="single-social-icon">
-                        <i class="fas fa-basketball-ball"></i>
+                        <i class="fab fa-github"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Github community!
                       </p>
                     </a>
                   </div>
@@ -473,7 +473,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social3.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -484,7 +484,7 @@
                         <i class="fab fa-twitter"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our X (Twitter) community!
                       </p>
                     </a>
                   </div>
@@ -495,7 +495,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social2.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
