--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
           <div class="row">
             <div class="col-6 col-lg-3 align-self-center">
               <a href="index.html" class="logo"
-                ><img src="assets/img/logo/logo.svg" alt=""
+                ><img src="assets/img/logo/logo.png" alt=""
               /></a>
             </div>
             <div class="col-6 text-center align-self-center">
@@ -454,7 +454,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social4.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -465,7 +465,7 @@
                         <i class="fab fa-linkedin-in"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Linkedin community!
                       </p>
                     </a>
                   </div>
@@ -476,7 +476,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social1.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -487,7 +487,7 @@
                         <i class="fab fa-facebook-f"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Facebook community!
                       </p>
                     </a>
                   </div>
@@ -498,7 +498,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social2.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -506,10 +506,10 @@
                   >
                     <a href="">
                       <span class="single-social-icon">
-                        <i class="fas fa-basketball-ball"></i>
+                        <i class="fab fa-github"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Github community!
                       </p>
                     </a>
                   </div>
@@ -520,7 +520,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social3.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -531,7 +531,7 @@
                         <i class="fab fa-twitter"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our X (Twitter) community!
                       </p>
                     </a>
                   </div>
@@ -542,7 +542,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social2.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
