--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
           <div class="row">
             <div class="col-6 col-lg-3 align-self-center">
               <a href="index.html" class="logo"
-                ><img src="assets/img/logo/logo.svg" alt=""
+                ><img src="assets/img/logo/logo.png" alt=""
               /></a>
             </div>
             <div class="col-6 text-center align-self-center">
@@ -157,7 +157,7 @@
               <i class="fal fa-times"></i>
             </div>
             <div class="logo">
-              <a href="#"><img src="assets/img/logo/logo.svg" alt="" /></a>
+              <a href="#"><img src="assets/img/logo/logo.png" alt="" /></a>
             </div>
             <div class="side-content">
               <p>
@@ -659,7 +659,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social4.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -670,7 +670,7 @@
                         <i class="fab fa-linkedin-in"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Linkedin community!
                       </p>
                     </a>
                   </div>
@@ -681,7 +681,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social1.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -692,7 +692,7 @@
                         <i class="fab fa-facebook-f"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Facebook community!
                       </p>
                     </a>
                   </div>
@@ -703,7 +703,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social2.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -711,10 +711,10 @@
                   >
                     <a href="">
                       <span class="single-social-icon">
-                        <i class="fas fa-basketball-ball"></i>
+                        <i class="fab fa-github"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our Github community!
                       </p>
                     </a>
                   </div>
@@ -725,7 +725,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social3.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
@@ -736,7 +736,7 @@
                         <i class="fab fa-twitter"></i>
                       </span>
                       <p class="single-soicial-text">
-                        join our instagram community!
+                        join our X (Twitter) community!
                       </p>
                     </a>
                   </div>
@@ -747,7 +747,7 @@
                   <div
                     class="sinlge-social-hover"
                     style="
-                      background: url(assets/img/social/social2.png);
+                      background: url(assets/img/social/socialcomm.jpg);
                       background-position: center;
                       -webkit-background-size: cover;
                       background-size: cover;
