--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 
   <head>
     <!--HEAD START-->
-    <title>Contact Us</title>
+    <title>Rizwan | Contact Us</title>
     <!--::::: support meta :::::::-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -116,7 +116,7 @@
                     <li><a href="#service">Service</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li>
-                      <a href="#">Pages</a>
+                      <a href="#">Details</a>
                       <ul>
                         <li><a href="about.html">About</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
@@ -161,23 +161,31 @@
             </div>
             <div class="side-content">
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint
-                ratione reprehenderit, error qui enim sit ex provident iure,
-                dolor, nulla eaque delectus, repudiandae commodi. Velit
-                assumenda odit quisquam at, error suscipit unde, necessitatibus
-                ipsum ratione excepturi ducimus labore, totam dolorem.
+                Innovative and versatile Developer with a passion for driving
+                efficiency in realm of app and web design & development. Armed
+                with a dynamic skill set, I specialize in transforming concepts
+                into cutting-edge digital solutions. With a keen eye for detail
+                and a commitment to excellence, I consistently push boundaries
+                to deliver impactful results in the ever-evolving tech
+                landscape.
               </p>
             </div>
             <div class="side-social">
               <ul>
                 <li>
-                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fa fa-envelope"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fab fa-twitter"></i></a>
+                  <a href="https://github.com/MRizwan1057/" target="_blank"
+                    ><i class="fab fa-github"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                  <a
+                    href="https://www.linkedin.com/in/rizwan-dev/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin-in"></i
+                  ></a>
                 </li>
                 <li>
                   <a href="#"><i class="fab fa-instagram"></i></a>
