--- a/about.html
+++ b/about.html
@@ -9,6 +9,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <!-- favicon -->
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../assets/img/logo/favicon.png"
+    />
+
     <!--::::: ALL CSS CALLING :::::::-->
     <link rel="stylesheet" href="assets/css/plugins/animate.min.css" />
     <link rel="stylesheet" href="assets/css/plugins/bootstrap.min.css" />
