--- a/about.html
+++ b/about.html
@@ -544,11 +544,11 @@
             <div class="col-lg-6 m-auto text-center">
               <div class="footer-menu">
                 <ul>
-                  <li><a href="#">about</a></li>
-                  <li><a href="#">service</a></li>
-                  <li><a href="#">blog</a></li>
-                  <li><a href="#">portfolio</a></li>
-                  <li><a href="#">contact me</a></li>
+                  <li><a href="./about.html">about</a></li>
+                  <li><a href="./single-portfolio.html">service</a></li>
+                  <li><a href="./blog.html">blog</a></li>
+                  <li><a href="./portfolio.html">portfolio</a></li>
+                  <li><a href="./contact.html">contact me</a></li>
                 </ul>
               </div>
               <div class="space-40"></div>
